--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -189,7 +189,7 @@
     "seconds": "Seconds",
     "week": "Week",
     "name": "Name",
-    "points":  "Points",
+    "points": "Points",
     "prize": "Prize",
     "prizePool": "Prize pool",
     "freeSpins": "Free Spins",
@@ -456,10 +456,11 @@
       "name": "RAPID SPINS Network Tournament",
       "text": "Navigate and bounce your way down the raging RAPID SPINS Network Tournament by EvoPlay. Race down the river for prizes and land in the final Prize Pool of €10,000!"
     },
-    "luckyPlayson": {
-      "upTo": "The prize pool is €13,000.",
-      "name": "Lucky 13",
-      "text": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/><br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
+    "sumdes": {
+      "title": "Summer Desserts Tournament",
+      "upTo": "€100,000",
+      "name": "Hunt down 100k with Summer Desserts",
+      "text": "The summer is in full swing, so what’s better than a Tournament Series from Booongo! Hurry up to enjoy the Summer Desserts Network Tournament Series at NineCasino! <br/>Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC).<br/><br/>nWhat are you waiting for? Don’t miss out on sharing the huge prize pool from Booongo! Play, enjoy, and win!"
     },
     "twitterGiveaway": {
       "title": "twitter<br/> Giveaway",
@@ -992,7 +993,7 @@
           "Gaming environments are often targeted by those wishing to launder money. The speed of       transactions and use of multiple payment processing options make gaming businesses especially       vulnerable to this activity.",
           "As a result, many of the initial trading and procedural decisions of the director are either       directly aimed at combatting this threat or protections are enhanced as a bi-product of the       overall commercial and trading approach/strategy taken by the business.",
           "ALL staff will be given training in Money Laundering indicators such as (but not limited to):"
-          ],
+        ],
         "list": [
           "Unusual Betting Patterns",
           "Suspicious deposit and withdrawal patterns (size and frequency)",
@@ -1198,7 +1199,7 @@
     },
     "riskWarnings": {
       "title": "Risk Warnings",
-      "text":"You understand that by participating in the games, you risk losing the money deposited to your       account on www.ninecasino.com; In some jurisdictions, online gambling may be illegal. You       understand and agree that www.ninecasino.com is not able to provide you legal advice or       guarantees regarding the legality of your use of the services of the Website. The Company does       not affirm that the services of the Website comply with legal requirements in your       jurisdiction. You use the services provided by www.ninecasino.com of your own choice and at       your sole discretion, as well, assuming the risk of liability, making a decision as to whether       the use of the services of the Website is legal in accordance with the current legislation of       your jurisdiction.You log in the Website and participate in the games at your own risk."
+      "text": "You understand that by participating in the games, you risk losing the money deposited to your       account on www.ninecasino.com; In some jurisdictions, online gambling may be illegal. You       understand and agree that www.ninecasino.com is not able to provide you legal advice or       guarantees regarding the legality of your use of the services of the Website. The Company does       not affirm that the services of the Website comply with legal requirements in your       jurisdiction. You use the services provided by www.ninecasino.com of your own choice and at       your sole discretion, as well, assuming the risk of liability, making a decision as to whether       the use of the services of the Website is legal in accordance with the current legislation of       your jurisdiction.You log in the Website and participate in the games at your own risk."
     },
     "bonusTermsPage": {
       "title1": "bonus terms & conditions",
@@ -1431,28 +1432,37 @@
       }
     ]
   },
-  "luckyPlayson": {
-    "title": "Lucky 13",
-    "prize": "€13,000",
-    "text": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/><br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!",
-    "textMobile": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/><br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!",
+  "sumdes": {
+    "title": "Summer Desserts Tournament",
+    "prize": "€100,000",
+    "text": "The summer is in full swing, so what’s better than a Tournament Series from Booongo! Hurry up to enjoy the Summer Desserts Network Tournament Series at NineCasino! Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC). Don’t miss out on sharing the huge prize pool from Booongo!",
+    "textMobile": "The summer is in full swing, so what’s better than a Tournament Series from Booongo! Hurry up to enjoy the Summer Desserts Network Tournament Series at NineCasino! Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC). Don’t miss out on sharing the huge prize pool from Booongo!",
     "terms": [
       {
-        "title": "The tournament runs between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
+        "title": "Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC)."
       },
       {
-        "title": "€13,000 Prize Pool Table:<br/>Places:        Prize EUR<br/>1   -     € 1,313<br/>2    -    € 1,013<br/>3    -    € 813<br/>4    -    € 666<br/>5    -    € 453<br/>6    -    € 413<br/>7    -    € 353<br/>8    -    € 313<br/>9    -    € 253<br/>10-12    -    € 213<br/>13    -    € 130<br/>14-25    -    € 93<br/>26-50    -    € 63<br/>51-150     -   € 33<br/>151-200    -    € 13"
+        "title": "It’s a combo of regular tournaments with mixed terms (the duration of each tournament in the series can vary); the Scoring tournament (where players will get points for each win spin) and also a 2nd (EXTRA) Leaderboard reflecting the player’s overall progress."
       },
       {
-        "title": "Minimum bet requirements:",
-        "text": "0.13 EUR"
+        "title": "Challenge for the Grand Total Prize Pool of €100,000 (or player’s currency equivalent):<br>- €80,000 in total for 10 regular tournaments (€8,000 EUR for each one); <br>- €20,000 for the Series Leaderboard ( prizes are paid out simultaneously with a closing Regular Tournament of the Series on 28.08.2021 23:00 UTC)."
       },
       {
-        "title": "With 13 participating games: <br/>● Book of Gold: Double Chance <br/>● Book of Gold: Multichance <br/>● Buffalo Power: Hold and Win <br/>● Burning Wins: classic 5 lines <br/>● Diamond Wins: Hold and Win <br/>● Divine Dragon: Hold and Win <br/>● Hot Coins: Hold and Win <br/>● Legend of Cleopatra Megaways™ <br/>● Sevens n Fruits <br/>● Solar Queen <br/>● Solar Temple <br/>● Super Sunny Fruits: Hold and Win <br/>● Wolf Power: Hold and Win.<br/><br/>"
+        "title": "Battle it out with these breathtaking games:<br>3 Coins Egypt; Pearl Diver; Wukong; Sun of Egypt 2; 15 Dragon Pearls; Hit the Gold!; 3 Coins; Magic Apple; Sun of Egypt; Dragon Pearls; Scarab Temple; Wolf Saga; Aztec Sun; Aztec Pyramid; Scarab Boost."
       },
       {
-        "title": "The minimum number of spins required to qualify in this promotion is 13 spins. Points are calculated round-by-round, with each 1 EUR wagered equaling 100 points."
+        "title": "Make a minimum bet of €0,5"
+      },
+      {
+        "title": "The minimum number of spins is 100."
+      },
+      {
+        "title": "Players will get points for each win spin - €1=1 Point. Players will get 1 Point for each х1 multiplier in win Spin."
       }
-    ]
+    ],
+    "metaInfo": {
+      "title": "➤ Summer Desserts  Tournament With Solid Prize Pool €100,000 - Play Your Favorite Games And Win Great Prizes!",
+      "description": "✭ Try Your Luck In New Summer Desserts  by Booongo ➔ Complete Missions - Win Prizes!"
+    }
   }
 }
