--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -454,10 +454,11 @@
       "name": "Tournoi en réseau RAPID SPINS d’EvoPlay",
       "text": "Explorez et trouvez votre chemin dans le tournoi en réseau RAPID SPINS d’EvoPlay. Descendez la rivière pour gagner des prix et débarquer dans la cagnotte finale de 10 000 €! "
     },
-    "luckyPlayson": {
-      "upTo": "The prize pool is €13,000.",
-      "name": "Lucky 13",
-      "text": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/><br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
+    "sumdes": {
+      "title": "La série de tournois Summer Desserts",
+      "upTo": "100 000 €",
+      "name": "Chassez les 100k des Summer Desserts",
+      "text": "L’été bat son plein, alors quoi de mieux qu’une série de tournois de Booongo? Dépêchez-vous de profiter de la série de tournois en réseau Summer Desserts sur NineCasino! <br>La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC).<br><br>Il n’y a plus rien qui vous empêche! Ne manquez pas de partager l’énorme cagnotte de Booongo! Jouez, amusez-vous et gagnez!"
     },
     "twitterGiveaway": {
       "title": "twitter<br/> Giveaway",
@@ -1429,28 +1430,37 @@
       }
     ]
   },
-  "luckyPlayson": {
-    "title": "Lucky 13",
-    "prize": "€13,000",
-    "text": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/><br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!",
-    "textMobile": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/><br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!",
+  "sumdes": {
+    "title": "La série de tournois Summer Desserts ",
+    "prize": "100 000 €",
+    "text": "L’été bat son plein, alors quoi de mieux qu’une série de tournois de Booongo? Dépêchez-vous de profiter de la série de tournois en réseau Summer Desserts sur NineCasino! <br>La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC).<br><br>Ne manquez pas de partager l’énorme cagnotte de Booongo!",
+    "textMobile": "L’été bat son plein, alors quoi de mieux qu’une série de tournois de Booongo? Dépêchez-vous de profiter de la série de tournois en réseau Summer Desserts sur NineCasino! <br>La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC).<br><br>Ne manquez pas de partager l’énorme cagnotte de Booongo!",
     "terms": [
       {
-        "title": "The tournament runs between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
+        "title": "La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC)."
       },
       {
-        "title": "€13,000 Prize Pool Table:<br/>Places:        Prize EUR<br/>1   -     € 1,313<br/>2    -    € 1,013<br/>3    -    € 813<br/>4    -    € 666<br/>5    -    € 453<br/>6    -    € 413<br/>7    -    € 353<br/>8    -    € 313<br/>9    -    € 253<br/>10-12    -    € 213<br/>13    -    € 130<br/>14-25    -    € 93<br/>26-50    -    € 63<br/>51-150     -   € 33<br/>151-200    -    € 13"
+        "title": "Il s’agit d’une combinaison de tournois réguliers avec des durées mixtes (la durée de chaque tournoi de la série peut varier); le tournoi de points (où les joueurs obtiendront des points pour chaque tour gagnant) et également un 2e tableau de classement (EXTRA) reflétant la progression globale du joueur."
       },
       {
-        "title": "Minimum bet requirements:",
-        "text": "0.13 EUR"
+        "title": "Relevez le défi pour le grand prix total de 100 000 € (ou l’équivalent dans la devise du joueur) :<br> - 80 000 € au total pour 10 tournois réguliers (8 000 € pour chacun);<br> - 20 000 € pour le classement de la série (les prix sont versés en même temps que le tournoi régulier de clôture de la série, le 28 août 2021 à 23 h 00 UTC)."
       },
       {
-        "title": "With 13 participating games: <br/>● Book of Gold: Double Chance <br/>● Book of Gold: Multichance <br/>● Buffalo Power: Hold and Win <br/>● Burning Wins: classic 5 lines <br/>● Diamond Wins: Hold and Win <br/>● Divine Dragon: Hold and Win <br/>● Hot Coins: Hold and Win <br/>● Legend of Cleopatra Megaways™ <br/>● Sevens n Fruits <br/>● Solar Queen <br/>● Solar Temple <br/>● Super Sunny Fruits: Hold and Win <br/>● Wolf Power: Hold and Win.<br/><br/>"
+        "title": "Mesurez-vous à ces jeux à couper le souffle :<br>3 Coins Egypt; Pearl Diver; Wukong; Sun of Egypt 2; 15 Dragon Pearls; Hit the Gold!; 3 Coins; Magic Apple; Sun of Egypt; Dragon Pearls; Scarab Temple; Wolf Saga; Aztec Sun; Aztec Pyramid; Scarab Boost."
       },
       {
-        "title": "The minimum number of spins required to qualify in this promotion is 13 spins. Points are calculated round-by-round, with each 1 EUR wagered equaling 100 points."
+        "title": "Pour participer, il vous suffit de placer une mise minimale de 0,5 €. "
+      },
+      {
+        "title": "Le nombre minimal de tours est de 100."
+      },
+      {
+        "title": "7. Les joueurs obtiennent des points pour chaque tour gagnant : 1 € = 1 point. Les joueurs obtiendront 1 point pour chaque multiplicateur de х1 dans le tour gagnant."
       }
-    ]
+    ],
+    "metaInfo": {
+      "title": "➤ Le tournoi Summer Desserts  avec une cagnotte impressionnante de 100 000 € – Jouez à vos jeux préférés et gagnez des prix exceptionnels!",
+      "description": "✭ Tentez votre chance dans le nouveau Summer Desserts  de Booongo ➔ Accomplissez des missions et gagnez des prix!"
+    }
   }
 }
