NINE-672 added pictures and promotions info

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -450,7 +450,7 @@
       "text": "Navigujte a proskákejte svou cestu skrz bouřlivý síťový turnaj RAPID SPINS od EvoPlay. Uhánějte po řece za cenami a přistaňte ve finálním prize poolu v hodnotě 10 000 €!"
     },
     "sumdes": {
-      "title": "Turnajové sérii Summer Desserts",
+      "title": "Turnajové sérii<br/> Summer Desserts",
       "upTo": "100 000 €",
       "name": "Pokuste se vyslídit 100k se Summer Desserts",
       "text": "Léto je v plném proudu, takže co může být lepšího než turnajová série od Booongo! Tak na nic nečekejte a uhánějte za zábavou v síťové turnajové sérii Summer Desserts na NineCasino! <br>Síťová turnajová série Summer Desserts proběhne od 19. srpna 2021 (0:00 UTC) do 28. srpna 2021 (23:00 UTC).<br><br>Tak na co čekáte? Nepromeškejte příležitost získat podíl na obrovském prize poolu od Booongo! Hrajte, bavte se a vyhrávejte!"
@@ -1426,7 +1426,7 @@
     ]
   },
   "sumdes": {
-    "title": "Turnajové sérii Summer Desserts",
+    "title": "Turnajové sérii <br>Summer Desserts",
     "prize": "100 000 €",
     "text": "Léto je v plném proudu, takže co může být lepšího než turnajová série od Booongo! Tak na nic nečekejte a uhánějte za zábavou v síťové turnajové sérii Summer Desserts na NineCasino! <br>Síťová turnajová série Summer Desserts proběhne od 19. srpna 2021 (0:00 UTC) do 28. srpna 2021 (23:00 UTC).<br><br>Nepromeškejte příležitost získat podíl na obrovském prize poolu od Booongo!",
     "textMobile": "Léto je v plném proudu, takže co může být lepšího než turnajová série od Booongo! Tak na nic nečekejte a uhánějte za zábavou v síťové turnajové sérii Summer Desserts na NineCasino! <br>Síťová turnajová série Summer Desserts proběhne od 19. srpna 2021 (0:00 UTC) do 28. srpna 2021 (23:00 UTC).<br><br>Nepromeškejte příležitost získat podíl na obrovském prize poolu od Booongo!",
