--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -455,7 +455,7 @@
       "text": "Explorez et trouvez votre chemin dans le tournoi en réseau RAPID SPINS d’EvoPlay. Descendez la rivière pour gagner des prix et débarquer dans la cagnotte finale de 10 000 €! "
     },
     "sumdes": {
-      "title": "La série de tournois Summer Desserts",
+      "title": "La série de tournois<br/> Summer Desserts",
       "upTo": "100 000 €",
       "name": "Chassez les 100k des Summer Desserts",
       "text": "L’été bat son plein, alors quoi de mieux qu’une série de tournois de Booongo? Dépêchez-vous de profiter de la série de tournois en réseau Summer Desserts sur NineCasino! <br>La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC).<br><br>Il n’y a plus rien qui vous empêche! Ne manquez pas de partager l’énorme cagnotte de Booongo! Jouez, amusez-vous et gagnez!"
@@ -1431,7 +1431,7 @@
     ]
   },
   "sumdes": {
-    "title": "La série de tournois Summer Desserts ",
+    "title": "La série de tournois <br>Summer Desserts ",
     "prize": "100 000 €",
     "text": "L’été bat son plein, alors quoi de mieux qu’une série de tournois de Booongo? Dépêchez-vous de profiter de la série de tournois en réseau Summer Desserts sur NineCasino! <br>La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC).<br><br>Ne manquez pas de partager l’énorme cagnotte de Booongo!",
     "textMobile": "L’été bat son plein, alors quoi de mieux qu’une série de tournois de Booongo? Dépêchez-vous de profiter de la série de tournois en réseau Summer Desserts sur NineCasino! <br>La série de tournois en réseau Summer Desserts se déroule du 19 août 2021 (0 h 00 UTC) au 28 août 2021 (23 h 00 UTC).<br><br>Ne manquez pas de partager l’énorme cagnotte de Booongo!",
