--- a/locales/de.json
+++ b/locales/de.json
@@ -461,7 +461,7 @@
       "text": "Navigieren und halten Sie Kurs bei dem stürmischen RAPID SPINS-Netzturnier von EvoPlay. Sausen Sie flussabwärts in das abschließende Gewinnbecken mit 10.000 €!"
     },
     "sumdes": {
-      "title": "Summer Desserts Turnierserie",
+      "title": "Summer Desserts<br/> Turnierserie",
       "upTo": "100.000 €",
       "name": "Auf den Geschmack kommen mit Summer Desserts",
       "text": "Der Sommer ist voll in Schwung, was wäre also besser als eine Turnierserie von Booongo? Schnell mitmachen bei der Online-Turnierserie Summer Desserts im NineCasino! <br>Online-Turnierserie Summer Desserts beginnt am 19. August um 00:00 Uhr UTC und endet am 28. August 2021 um 23:00 Uhr UTC.<br><br>Worauf warten Sie noch? Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo! Spielen, Spaß haben und gewinnen!"
@@ -1437,7 +1437,7 @@
     ]
   },
   "sumdes": {
-    "title": "Summer Desserts Turnierserie",
+    "title": "Summer Desserts <br>Turnierserie",
     "prize": "100.000 €",
     "text": "Der Sommer ist voll in Schwung, was wäre also besser als eine Turnierserie von Booongo? Schnell mitmachen bei der Online-Turnierserie Summer Desserts im NineCasino! <br>Online-Turnierserie Summer Desserts beginnt am 19. August um 00:00 Uhr UTC und endet am 28. August 2021 um 23:00 Uhr UTC.<br>Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo!",
     "textMobile": "Der Sommer ist voll in Schwung, was wäre also besser als eine Turnierserie von Booongo? Schnell mitmachen bei der Online-Turnierserie Summer Desserts im NineCasino! <br>Online-Turnierserie Summer Desserts beginnt am 19. August um 00:00 Uhr UTC und endet am 28. August 2021 um 23:00 Uhr UTC.<br>Verpassen Sie nicht Ihren Teil am riesigen Preisgeld von Booongo!",
