--- a/locales/de.json
+++ b/locales/de.json
@@ -471,6 +471,12 @@
       "name": "Spirit of Egypt 60k",
       "text": "Folgen Sie dem Spirit of Egypt zu 60.000 Euro!<br/><br/>Neue Abenteuer deuten sich an, und Playson erwartet Sie ab 00:01 Uhr UTC am 20. August 2021 bis 23:59 Uhr UTC am 29. August 2021 zu dem Spirit of Egypt-Turnier um 60.000 Euro.<br/><br/>Das Gesamtpreisgeld beträgt umwerfende 60.000 Euro, und auf dem Gipfel der Pyramiden warten 10.000 davon! Machen Sie Ihr Glück bei Spirit of Egypt um 60.000 Euro!"
     },
+    "demigods": {
+      "title": "Demi God Tales <br/>Tournament <br/>Runde I",
+      "upTo": "20.000 €",
+      "name": "Werden Sie der Held in Demi God Tales",
+      "text": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst."
+    },
     "twitterGiveaway": {
       "title": "twitter<br/> Giveaway",
       "upTo": "600 Freispiele",
@@ -1500,5 +1506,35 @@
         "title": "Die Punkte werden Runde für Runde berechnet, dabei entspricht jeder umgesetzte Euro umgerechnet 100 Punkten."
       }
     ]
+  },
+  "demigods": {
+    "title": "Demi God Tales Tournament<br>Runde I",
+    "prize": "20.000 €",
+    "text": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst.",
+    "textMobile": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst.",
+    "terms": [
+      {
+        "title": "Runde I beginnt am 24. August um 00:00 Uhr UTC und endet am 30. August 2021 um 23:00 Uhr UTC."
+      },
+      {
+        "title": "Teilnehmende Spiele:<br>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II."
+      },
+      {
+        "title": "Die 150 Bestplatzierten teilen sich den Gesamtgewinn von 20.000 Euro."
+      },
+      {
+        "title": "Spielen Sie eines oder mehrere der teilnehmenden Spiele. Jeder Gewinn bringt Ihnen Wertungspunkte entsprechend dem Gewinnmultiplikator (wird zum Beispiel mit einem gesetzten Euro ein Gewinn von 10 Euro erzielt, ergibt das 10 Punkte für Sie)."
+      },
+      {
+        "title": "Die gesammelten Punkte werden während des gesamten Turnierverlaufs aufaddiert. Je mehr Punkte Sie sammeln, desto besser Ihre Platzierung in der Rangliste."
+      },
+      {
+        "title": "Der zur Teilnahme an dem Turnier berechtigende Mindesteinsatz je Ausspielung beträgt 0,5 Euro."
+      }
+    ],
+    "metaInfo": {
+      "title": "➤ Demi God Tales-Turnier mit massivem Preisgeld von 40.000 € – Spiele deine Lieblingsspiele und gewinne tolle Preise!",
+      "description": "✭ Versuch dein Glück beim neuen Demi God Tales von Spinomenal  ➔ Schließe Missionen ab – gewinne Preise!"
+    }
   }
 }
