NINE-692 fixed text in cz

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -456,7 +456,7 @@
       "text": "Léto je v plném proudu, takže co může být lepšího než turnajová série od Booongo! Tak na nic nečekejte a uhánějte za zábavou v síťové turnajové sérii Summer Desserts na NineCasino! <br>Síťová turnajová série Summer Desserts proběhne od 19. srpna 2021 (0:00 UTC) do 28. srpna 2021 (23:00 UTC).<br><br>Tak na co čekáte? Nepromeškejte příležitost získat podíl na obrovském prize poolu od Booongo! Hrajte, bavte se a vyhrávejte!"
     },
     "demigods": {
-      "title": "Demi God Tales <br/>TournamentKolo I",
+      "title": "Demi God Tales <br/>Tournament<br/> Kolo I",
       "upTo": "€ 20 000",
       "name": "Staňte se hrdinou v Demi God Tales",
       "text": "Řecké báje o bozích, polobozích, hrdinech a lidech jsou zachyceny v tisících fascinujících příbězích, které si lidstvo vypráví již celá staletí. Spinomenal použil tyto příběhy jako předlohul a přetvořil je do nezapomenutelné řady slotových her v turnaji pojmenovaném Demi Gods Tales."
