NINE-697 fixed text in terms

--- a/locales/de.json
+++ b/locales/de.json
@@ -1497,13 +1497,13 @@
     "textMobile": "Griechische Sagen über Götter, Halbgötter, Helden und einfache Menschen boten Nahrung für abertausende faszinierender Geschichten, die sich die Menschen seit Jahrhunderten erzählen. Spinomenal hat diese enorme Fülle an Sagen in dem Demi Gods Tales-Turnier zu einer unvergessliche Reihe von Automatenspielen zusammengefasst.",
     "terms": [
       {
-        "title": "Runde I beginnt am 24. August um 00:00 Uhr UTC und endet am 30. August 2021 um 23:00 Uhr UTC."
+        "title": "Runde I beginnt am 24. August um 00:00 Uhr UTC und endet am 30. August 2021 um 23:00 Uhr UTC.<br><br>"
       },
       {
-        "title": "Teilnehmende Spiele:<br>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II."
+        "title": "Teilnehmende Spiele:<br>Demi Gods II, Demi Gods II – 15 Lines, Book Of Demi Gods II.<br><br>"
       },
       {
-        "title": "Die 150 Bestplatzierten teilen sich den Gesamtgewinn von 20.000 Euro."
+        "title": "Die 150 Bestplatzierten teilen sich den Gesamtgewinn von 20.000 Euro.<br><br>"
       },
       {
         "title": "Spielen Sie eines oder mehrere der teilnehmenden Spiele. Jeder Gewinn bringt Ihnen Wertungspunkte entsprechend dem Gewinnmultiplikator (wird zum Beispiel mit einem gesetzten Euro ein Gewinn von 10 Euro erzielt, ergibt das 10 Punkte für Sie)."
